@@ -110,13 +110,13 @@ void CYouLess::GetMeterDetails()
 		return;
 	}
 	int fpos;
-	std::string pusage=results[0];
+	std::string pusage=stdstring_trim(results[0]);
 	fpos=pusage.find_first_of(" ");
 	if (fpos!=std::string::npos)
 		pusage=pusage.substr(0,fpos);
 	pusage=stdreplace(pusage,",","");
 
-	std::string pcurrent=results[1];
+	std::string pcurrent=stdstring_trim(results[1]);
 	fpos=pcurrent.find_first_of(" ");
 	if (fpos!=std::string::npos)
 		pcurrent=pcurrent.substr(0,fpos);
